--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,5 @@
+# ???? ??? ??? ?? ?? ??? ? ? ???? ??
+# ???? ?? ? default ???? ????.
 spring.profiles.active=test
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
 #spring.datasource.username=sa
