--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# ???? ??? ??? ?? ?? ??? ? ? ???? ??
+# ???? ?? ? default ???? ????.
 spring.profiles.active=local
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.username=sa
