--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,10 @@
-# ???? ??? ??? ?? ?? ??? ? ? ???? ??
-# ???? ?? ? default ???? ????.
+# ??? ??? ???
 spring.profiles.active=test
+# ?????? ??????
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
 #spring.datasource.username=sa
 
+#jdbc log
 logging.level.org.springframework.jdbc=debug
 
 #JPA log
