--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,7 @@
-# ??? ??? ???
+# ???? ??? ??
 spring.profiles.active=test
-# ?????? ??????
+# ???? db datasource ???
+# ?? ?? ???? ??? ?????? ???? DB? ??? ??
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
 #spring.datasource.username=sa
 
